<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context="com.nope.sjtu.extremecontroller.MainActivity">-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nope.sjtu.extremecontroller.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!--开始-->
    <Button
        android:id="@+id/button_start"
        android:layout_width="150dp"
        android:layout_height="75dp"

        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"
        android:text="@string/Button_Start_Text"
        android:textSize="14sp" />

    <!--连接蓝牙-->
    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button_start"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"
        android:text="@string/连接蓝牙" />

    <!--连接热点-->
    <Button
        android:id="@+id/button_wifi"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button_bluetooth"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"
        android:text="@string/连接热点" />

    <!--结束按钮-->
    <Button
        android:id="@+id/button_end"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button_wifi"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"
        android:text="@string/结束" />

    <!--背景-->
    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/background"
        android:contentDescription="TODO" />

    <!--摇杆外轮廓-->
    <ImageView
        android:id="@+id/image_ring"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="-10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ring"
        android:contentDescription="TODO"/>

    <!--摇杆中心-->
    <com.nope.sjtu.extremecontroller.Axis
        android:id="@+id/axis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/teller"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-3dp"
        android:layout_toStartOf="@+id/button_bluetooth"
        android:text="@string/speed_00_radius_66666"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />


</RelativeLayout>


<!--</android.support.constraint.ConstraintLayout>-->