<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="64">

        <Button
            android:id="@+id/button_wifi"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/button_gesture"
            android:layout_alignBottom="@+id/button_gesture"
            android:layout_toEndOf="@+id/button_gesture"
            android:layout_weight="5"
            android:background="@drawable/button_small"
            android:rotation="-90"
            android:text="@string/连接热点" />

        <TextView
            android:id="@+id/textShowIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_speech"
            android:layout_alignBottom="@+id/button_speech"
            android:layout_marginStart="68dp"
            android:layout_toEndOf="@+id/icon_speech"
            android:layout_weight="16"
            android:rotation="-90
    "
            android:text="尚未连接WiFi"
            android:textSize="24sp"
            app:layout_constraintDimensionRatio="h,1:1" />

        <Button
            android:id="@+id/button_gesture"
            android:layout_width="250dp"
            android:layout_height="150dp"

            android:layout_alignStart="@+id/button_speech"
            android:layout_below="@+id/button_speech"
            android:background="@drawable/button_big"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/Button_gesture_Text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/gesture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignStart="@+id/icon_speech"
            android:layout_alignTop="@+id/icon_gravity"
            app:srcCompat="@drawable/icon_gesture" />

        <Button
            android:id="@+id/button_control_joy"
            android:layout_width="250dp"
            android:layout_height="150dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/button_big"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/Button_joystick_Text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/icon_joy"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignStart="@+id/button_control_joy"
            android:layout_alignTop="@+id/button_control_joy"
            android:layout_marginStart="13dp"
            android:layout_marginTop="14dp"
            app:srcCompat="@drawable/icon_joystick" />

        <Button
            android:id="@+id/button_speech"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/button_control_joy"
            android:layout_marginEnd="56dp"
            android:background="@drawable/button_big"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/Button_speech_Text"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/icon_speech"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_alignStart="@+id/button_speech"
            android:layout_alignTop="@+id/icon_joy"
            android:layout_marginStart="13dp"
            app:srcCompat="@drawable/icon_speech" />

        <Button
            android:id="@+id/button_gravity"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_alignStart="@+id/button_control_joy"
            android:layout_below="@+id/button_control_joy"
            android:background="@drawable/button_big"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/Button_gravity_Text"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/icon_gravity"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignStart="@+id/icon_joy"
            android:layout_below="@+id/button_control_joy"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/icon_gravity" />

    </RelativeLayout>

    <!--结束按钮-->


</RelativeLayout>